chore: overal refactor and styles change

--- a/src/i18n/translations/pt-pt.json
+++ b/src/i18n/translations/pt-pt.json
@@ -3,7 +3,7 @@
         "home.greeting": "Olá, aqui é a página Home",
         "home.main.title": "Os Posts Mais Recentes",
         "post.page.make.comment.label": "Faça um comentário",
-        "post.preview.read.post.btn": "Ler Artigo",
+        "post.preview.read.post.btn": "Ler artigo",
         "posts.failed.fetch": "Erro ao carregar posts :(",
         "posts.load.more": "Carregar Mais Posts",
         "posts.no.more.posts": "Não há mais posts...",
@@ -11,10 +11,10 @@
         "commnent.form.cancel.reply.btn": "Cancelar",
         "commnent.form.edit.btn": "Editar",
         "commnent.form.cancel.edit.btn": "Cancelar",
-        "commnent.form.show.replies.btn": "Mostrar Respostas",
-        "commnent.form.hide.replies.btn": "Esconder Respostas",
+        "commnent.form.show.replies.btn": "Mostrar respostas",
+        "commnent.form.hide.replies.btn": "Esconder respostas",
         "commnent.form.name.label": "Nome",
-        "commnent.form.submit.btn": "Enviar Comentário",
+        "commnent.form.submit.btn": "Enviar comentário",
         "comment.content.error.required": "Comentário não pode estar vazio",
         "comment.name.error.min.char": "Nome deve ter no mínimo 3 caracteres",
         "comment.name.error.required": "Nome não pode estar vazio",
@@ -30,6 +30,6 @@
         "layout.view.list": "Lista",
         "comment.edit.fail.message": "Erro ao editar comentário.",
         "comment.create.fail.message": "Erro ao criar comentário.",
-        "home.link.text": "Home"
+        "home.link.text": "HOME"
     }
 }
