--- a/src/i18n/translations/en-us.json
+++ b/src/i18n/translations/en-us.json
@@ -3,7 +3,7 @@
         "home.greeting": "Hi, this is the Home page.",
         "home.main.title": "The Most Recent Posts",
         "post.page.make.comment.label": "Make a Comment",
-        "post.preview.read.post.btn": "Read Article",
+        "post.preview.read.post.btn": "Read article",
         "posts.failed.fetch": "Failed to fetch posts :(",
         "posts.load.more": "Load More Posts",
         "posts.no.more.posts": "There are no more posts...",
@@ -14,7 +14,7 @@
         "commnent.form.show.replies.btn": "Show Replies",
         "commnent.form.hide.replies.btn": "Hide Replies",
         "commnent.form.name.label": "Name",
-        "commnent.form.submit.btn": "Submit Comment",
+        "commnent.form.submit.btn": "Submit comment",
         "comment.content.error.required": "Comment can not be empty",
         "comment.name.error.min.char": "Name needs to have at least 3 characters",
         "comment.name.error.required": "Name is required",
@@ -30,6 +30,6 @@
         "layout.view.list": "List",
         "comment.edit.fail.message": "Failed to edit comment.",
         "comment.create.fail.message": "Failed to create comment.",
-        "home.link.text": "Home"
+        "home.link.text": "HOME"
     }
 }
